<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/font_size_action"
            android:icon="@drawable/ic_format_size_black_24dp"
            android:title=""
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/font_size_1"
            android:title="@string/font_multi_1"
            app:showAsAction="never"/>

    <item
            android:id="@+id/font_size_1_25"
            android:title="@string/font_multi_1_25"
            app:showAsAction="never"/>

    <item
            android:id="@+id/font_size_1_5"
            android:title="@string/font_multi_1_5"
            app:showAsAction="never"/>

    <item
            android:id="@+id/font_size_1_75"
            android:title="@string/font_multi_1_75"
            app:showAsAction="never"/>

    <item
            android:id="@+id/font_size_2"
            android:title="@string/font_multi_2"
            app:showAsAction="never"/>

</menu>